fix: 一系列流程问题